# daily-pumita

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
component_requirements/: API.md  Database.md  ImageScrappingService.md  TelegramBot.md
schemas/: mvp.excalidraw
scraper/: main.py
src/: main.py
