[tool.poetry]
name = "daily-pumita"
version = "0.1.0"
description = ""
authors = ["Pablo <pablo.skewes@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.1.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
Flake8-pyproject = "^1.2.3"
pytest = "^8.2.0"
notebook = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    .git
    | .venv
    | build
    | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", ".venv", "build", "dist"]
